# dartscope

./: .dartscope-audit-trigger  .dartscope-consistency-result.md  .dartscope-index004-error.txt  .dartscope-index004-graphql.py  .dartscope-index004-references-error.txt  .dartscope-index004-references.py  .dartscope-index004-slice.py  .dartscope-lint001.py  .dartscope-mode-result  .dartscope-mode-trigger  .gitattributes  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
crates/dartscope/: Cargo.toml
crates/dartscope-cli/: Cargo.toml
crates/dartscope-cli/src/: input_limits.rs  lint_command.rs  main.rs  output_limits.rs  result_limits.rs
crates/dartscope-cli/src/lint_command/: sarif.rs
crates/dartscope-cli/tests/: cli_contract.rs  deep_directory.rs  lint_command.rs  versioned_json_contracts.rs
crates/dartscope-cli/tests/fixtures/: file-analysis-v1.json  flutter-inventory-v1.json  graphql-contracts-v1.json  lint-analysis-v1.json  project-analysis-v1.json  uri-graph-v1.json
crates/dartscope-core/: Cargo.toml
crates/dartscope-core/src/: lib.rs  pubspec.rs
crates/dartscope-core/tests/: pubspec_configuration_serialization.rs  pubspec_source_serialization.rs
crates/dartscope-core/tests/fixtures/: pubspec_configuration.json  pubspec_dependency_sources.json
crates/dartscope-flutter/: Cargo.toml
crates/dartscope-flutter/src/: conventions.rs  ecosystem.rs  lib.rs  themes.rs
crates/dartscope-flutter/src/catalogs/: assets.rs  localizations.rs  mod.rs
crates/dartscope-flutter/tests/: convention_boundary.rs  ecosystem_conventions.rs  official_navigation.rs  official_themes.rs
crates/dartscope-index/: Cargo.toml
crates/dartscope-index/examples/: incremental_workspace_baseline.rs
crates/dartscope-index/src/: graphql.rs  incremental.rs  lexical_bindings.rs  lib.rs  namespace.rs  navigation.rs  parts.rs  paths.rs  references.rs  uri_graph.rs
crates/dartscope-index/src/navigation/: members.rs
crates/dartscope-index/src/tests/: graphql.rs  incremental.rs  mod.rs  namespace.rs  parts.rs  permutations.rs  uri_graph.rs
crates/dartscope-index/tests/: commented_statement_for_resolution.rs  declaration_order_resolution.rs  deterministic_properties.rs  existing_for_in_resolution.rs  incremental_navigation_parity.rs  lexical_binding_resolution.rs  lexical_region_resolution.rs  multi_declarator_for_resolution.rs  navigation_batch.rs  navigation_constructors.rs  navigation_member_regressions.rs  navigation_methods.rs  navigation_operators.rs  navigation_properties.rs  reference_resolution.rs  reference_scope_resolution.rs  single_statement_for_resolution.rs  string_delimiter_for_resolution.rs  try_statement_for_resolution.rs  variable_read_resolution.rs  variable_update_resolution.rs  variable_write_resolution.rs
crates/dartscope-json/: Cargo.toml
crates/dartscope-json/src/: lib.rs
crates/dartscope-lints/: Cargo.toml
crates/dartscope-lints/examples/: incremental_lint_baseline.rs
crates/dartscope-lints/src/: config.rs  context.rs  engine.rs  incremental.rs  lib.rs  model.rs
crates/dartscope-lints/src/rules/: forbidden_imports.rs  layer_boundaries.rs  mod.rs  naming.rs  orphan_files.rs  unresolved_parts.rs
crates/dartscope-lints/tests/: incremental.rs  rule_engine.rs
crates/dartscope-parse/: Cargo.toml
crates/dartscope-parse/src/: analysis.rs  backend.rs  declarations.rs  flutter_hints.rs  fuzzing.rs  graphql.rs  identifier_references.rs  lexical.rs  lexical_bindings.rs  lexical_reads.rs  lexical_writes.rs  lib.rs  member_reference_syntax.rs  member_references.rs  namespace.rs  operator_references.rs  project_input.rs  property_references.rs  pubspec.rs  pubspec_analysis.rs  pubspec_assets.rs  pubspec_backend.rs  pubspec_configuration.rs  pubspec_configuration_analysis.rs  pubspec_source.rs  pubspec_syntax.rs  pubspec_yaml_backend_parity.rs  pubspec_yaml_contract.rs  pubspec_yaml_marked.rs  pubspec_yaml_marked_analysis.rs  pubspec_yaml_marked_configuration.rs  pubspec_yaml_marked_dependencies.rs  pubspec_yaml_subset.rs  source_lines.rs
crates/dartscope-parse/src/declaration_inventory/: mod.rs  scanner.rs  syntax.rs
crates/dartscope-parse/src/identifier_references/: typed.rs  typed_positions.rs
crates/dartscope-parse/src/invocations/: arguments.rs  mod.rs  scanner.rs
crates/dartscope-parse/src/lexical_reads/: deferred.rs
crates/dartscope-parse/src/lexical_regions/: closures.rs  controls.rs  mod.rs  scan.rs
crates/dartscope-parse/src/tests/: analysis.rs  graphql.rs  metamorphic.rs  mod.rs  pubspec_assets.rs  pubspec_syntax.rs
crates/dartscope-parse/tests/: commented_statement_for.rs  deferred_region_writes.rs  deterministic_properties.rs  existing_for_in.rs  fixtures_test.rs  identifier_references.rs  lexical_bindings.rs  lexical_declaration_order.rs  lexical_reads.rs  lexical_region_bindings.rs  lexical_updates.rs  lexical_writes.rs  member_reference_regressions.rs  multi_declarator_for.rs  operator_references.rs  project_input_paths.rs  property_references.rs  pubspec_analysis_serialization.rs  pubspec_asset_configuration.rs  pubspec_backend_parity.rs  pubspec_core_storage.rs  single_statement_for.rs  string_delimiter_for.rs  try_statement_for.rs
crates/dartscope-parse/tests/fixtures/: pubspec_analysis.json  pubspec_asset_configuration.json
crates/dartscope-parse/tests/fixtures/flutter_app/: pubspec.yaml
crates/dartscope-parse/tests/fixtures/flutter_app/lib/: main.dart  (+1 more)
crates/dartscope-resolve/: Cargo.toml
crates/dartscope-resolve/src/: lib.rs
crates/dartscope/examples/: quality_benchmark.rs
crates/dartscope/src/: lib.rs
fuzz/: Cargo.toml
fuzz/corpus/directives/: conditional_import.dart  missing_semicolon.dart
fuzz/corpus/graphql/: malformed.dart  operation.dart
fuzz/corpus/lexical_masking/: nested_comments.dart  unterminated.dart
fuzz/corpus/pubspec_package_config/: package_config.json  pubspec.yaml
fuzz/corpus/uri_normalization/: package_uri.txt  windows_path.txt
fuzz/fuzz_targets/: directives.rs  graphql.rs  lexical_masking.rs  pubspec_package_config.rs  uri_normalization.rs
(+402 files in other folders)
