[workspace]
resolver = "2"
members = [
    "crates/dartscope",
    "crates/dartscope-core",
    "crates/dartscope-parse",
    "crates/dartscope-index",
    "crates/dartscope-resolve",
    "crates/dartscope-json",
    "crates/dartscope-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/RusTokRs/dartscope"
description = "Rust toolkit for Dart and Flutter code intelligence"

[workspace.dependencies]
dartscope-core = { path = "crates/dartscope-core" }
dartscope-parse = { path = "crates/dartscope-parse" }
dartscope-index = { path = "crates/dartscope-index" }
dartscope-resolve = { path = "crates/dartscope-resolve" }
dartscope-json = { path = "crates/dartscope-json" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uriparse = "0.6.4"
percent-encoding = "2"
