[workspace]
resolver = "3"
members = [
    "crates/dartscope",
    "crates/dartscope-core",
    "crates/dartscope-parse",
    "crates/dartscope-index",
    "crates/dartscope-lints",
    "crates/dartscope-resolve",
    "crates/dartscope-flutter",
    "crates/dartscope-json",
    "crates/dartscope-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/RusTokRs/dartscope"
homepage = "https://github.com/RusTokRs/dartscope"
readme = "README.md"
keywords = ["dart", "flutter", "static-analysis", "code-intelligence"]
categories = ["development-tools"]
description = "Rust toolkit for Dart and Flutter code intelligence"

[workspace.dependencies]
dartscope = { version = "0.1.0", path = "crates/dartscope" }
dartscope-core = { version = "0.1.0", path = "crates/dartscope-core" }
dartscope-parse = { version = "0.1.0", path = "crates/dartscope-parse" }
dartscope-index = { version = "0.1.0", path = "crates/dartscope-index" }
dartscope-lints = { version = "0.1.0", path = "crates/dartscope-lints" }
dartscope-resolve = { version = "0.1.0", path = "crates/dartscope-resolve" }
dartscope-flutter = { version = "0.1.0", path = "crates/dartscope-flutter" }
dartscope-json = { version = "0.1.0", path = "crates/dartscope-json" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uriparse = "0.6.4"
percent-encoding = "2"
toml = { version = "1.1.3", default-features = false, features = ["parse", "serde"] }
yaml-rust2 = { version = "=0.11.0", default-features = false }
