[package]
name = "dartscope-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/dartscope-cli"
description = "Small CLI wrapper for DartScope local workflows"

[[bin]]
name = "dartscope"
path = "src/main.rs"
doc = false

[dependencies]
dartscope = { workspace = true, features = ["parse", "index", "json", "flutter", "lints"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
