[package]
name = "dartscope-flutter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Flutter convention analysis for DartScope"

[dependencies]
dartscope-core.workspace = true
serde.workspace = true
serde_json.workspace = true
yaml-rust2.workspace = true

[dev-dependencies]
dartscope-parse.workspace = true
