[package]
name = "dartscope-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Project indexing and cross-file analysis for DartScope"

[dependencies]
dartscope-core.workspace = true
dartscope-resolve.workspace = true

[dev-dependencies]
dartscope-parse.workspace = true
serde_json.workspace = true
