[package]
name = "dartscope-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Stable JSON serialization helpers for DartScope analysis output"

[dependencies]
dartscope-core.workspace = true
serde.workspace = true
serde_json.workspace = true

