[package]
name = "dartscope-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/dartscope-json"
description = "Versioned JSON contracts and serialization helpers for DartScope output"

[dependencies]
dartscope-core.workspace = true
serde.workspace = true
serde_json.workspace = true
