[package]
name = "dartscope-lints"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/dartscope-lints"
description = "Optional deterministic lint rules for normalized DartScope analysis"

[dependencies]
dartscope-core.workspace = true
dartscope-index.workspace = true
serde.workspace = true

[dev-dependencies]
dartscope-parse.workspace = true
serde_json.workspace = true
