[package]
name = "dartscope-parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Conservative Dart and Flutter file analysis for DartScope"

[dependencies]
dartscope-core.workspace = true
dartscope-resolve.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
