[package]
name = "dartscope-parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/dartscope-parse"
description = "Conservative Dart and Flutter file analysis for DartScope"

[dependencies]
dartscope-core.workspace = true
dartscope-resolve.workspace = true
yaml-rust2.workspace = true

[dev-dependencies]
serde_json.workspace = true
