[package]
name = "dartscope-resolve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/dartscope-resolve"
description = "Package and URI resolution inputs for DartScope"

[dependencies]
dartscope-core.workspace = true
serde.workspace = true
serde_json.workspace = true
uriparse.workspace = true
percent-encoding.workspace = true
thiserror.workspace = true
